--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,10 @@
 
     const getUserName = async () => {
       const username = localStorage.getItem("username")
-      if (username) return username
+      if (username) {
+        console.log(`User existed ${username}`)
+        return username
+      }
       else {
         const usuario = await fetch("https://random-data-api.com/api/v2/users/random_user")
         const dataUser = await usuario.json()
